2006-04-29  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed file repack item.

2006-04-29  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-file.cc (chroot_file>): Check for
	CHROOT_FILE_REPACK in the environment.

2006-04-29  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document GCC portability.

	* test/Makefile.am (AM_CXXFLAGS): Remove -Wextra, for GCC 3.3/3.4
	portability.

	* schroot/sbuild-chroot-config.cc (load_data): Construct
	__gnu_cxx::stdio_filebuf appropriately, depending on the required
	construction semantics.

	* schroot/sbuild-chroot.cc (setup_session_info): Construct
	__gnu_cxx::stdio_filebuf appropriately, depending on the required
	construction semantics.

	* configure.ac: Check whether the old (GCC < 3.4) or new (GCC >=
	3.4) __gnu_cxx::stdio_filebuf construction semantics are required,
	for portability to older GCC versions.

2006-04-26  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/10mount (do_mount) : Create directories for
	mounting filesystems onto if they don't exist.

2006-04-26  Roger Leigh  <rleigh@debian.org>

	* po/POTFILES.in: Add schroot/sbuild-format-detail.h

2006-04-26  Roger Leigh  <rleigh@debian.org>

	* GCC 4.2 compatibility fixes.

	* test/sbuild-keyfile.cc (test_set_value): Use iterator ranges,
	rather than whole containers, when calling
	keyfile::set_list_value.

	* schroot/sbuild-chroot-source.cc
	(get_keyfile): Use iterator ranges, rather than whole containers,
	when calling keyfile::set_list_value.
	(set_keyfile): Reindent.

	* schroot/sbuild-chroot.cc
	(get_keyfile): Use iterator ranges, rather than whole containers,
	when calling keyfile::set_list_value.
	(set_keyfile): Reindent.

	* schroot/sbuild-keyfile.h
	(get_list_value): Templated on container type only; the value_type
	is no longer a template parameter.  generic_value is used for the
	type conversion.
	(set_list_value: A range specified by iterators is used, rather
	than the whole container.
